--- a/src/app/components/user-card/user-card.component.html
+++ b/src/app/components/user-card/user-card.component.html
@@ -1,1 +1,15 @@
-<p>user-card works!</p>
+<div class="card mb-3" >
+    <div class="row g-0">
+     <div class="col-md-4">
+      <img src="..." class="img-fluid rounded-start" alt="...">
+     </div>
+     <div class="col-md-8">
+      <div class="card-body">
+       <h5 class="card-title">{{miUser.first_name}}</h5>
+       <h5 class="card-title">{{miUser.last_name}}</h5>
+       <p class="card-text">{{miUser.username}}</p>
+       <p class="card-text"><small class="text-body-secondary">{{miUser.email}}</small></p>
+      </div>
+     </div>
+    </div>
+   </div>
