--- a/src/app/pages/users-list/users-list.component.html
+++ b/src/app/pages/users-list/users-list.component.html
@@ -1,7 +1,8 @@
 <div class="row">
+    
     @for (user of arrUsers; track user.id) {
         <article class="col-12 col-md-6 col-md-3">
-            <app-user-card [miUser]="user"></app-user-card>
+            <app-user-card ></app-user-card>
         </article>
     }
     
