--- a/src/app/components/user-card/user-card.component.html
+++ b/src/app/components/user-card/user-card.component.html
@@ -1,4 +1,20 @@
+<div class="card border-dark mb-3" style="width: 18rem;">
+    <img src="{{miUser.image}}" class="img-fluid rounded-start" alt="{{miUser.username}}">
+    <div class="card-body">
+      <h4 class="card-title">{{miUser.first_name}}</h4>
+      <h5 class="card-title">{{miUser.last_name}}</h5>
+      <p class="card-text">&#64;{{miUser.username}}</p>
+    </div>
+  </div>
 
+
+
+
+
+
+
+
+<!--
 <div class="card mb-3" >
     <div class="row g-0">
      <div class="col-md-4">
@@ -14,3 +30,4 @@
      </div>
     </div>
    </div>
+-->
