--- a/src/app/pages/users-list/users-list.component.html
+++ b/src/app/pages/users-list/users-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     @for (user of arrUsers; track user.id) {
-        <article class="col-12 col-md-6 col-md-3">
+        <article class="col-12 col-md-4 mb-4">
             <app-user-card [miUser]="user"></app-user-card>
         </article>
     }
