--- a/src/app/components/user-card/user-card.component.html
+++ b/src/app/components/user-card/user-card.component.html
@@ -1,33 +1,10 @@
 <div class="card border-dark mb-3" style="width: 18rem;">
-    <img src="{{miUser.image}}" class="img-fluid rounded-start" alt="{{miUser.username}}">
+    <img [src] ="miUser.image" class="img-fluid rounded-start" [alt]="miUser.username">
     <div class="card-body">
       <h4 class="card-title">{{miUser.first_name}}</h4>
       <h5 class="card-title">{{miUser.last_name}}</h5>
       <p class="card-text">&#64;{{miUser.username}}</p>
+      <a [routerLink]="['/user', miUser.id]">Ver detalle</a>
     </div>
   </div>
 
-
-
-
-
-
-
-
-<!--
-<div class="card mb-3" >
-    <div class="row g-0">
-     <div class="col-md-4">
-      <img src="{{miUser.image}}" class="img-fluid rounded-start" alt="{{miUser.username}}">
-     </div>
-     <div class="col-md-8">
-      <div class="card-body">
-       <h5 class="card-title">{{miUser.first_name}}</h5>
-       <h5 class="card-title">{{miUser.last_name}}</h5>
-       <p class="card-text">{{miUser.username}}</p>
-       <p class="card-text"><small class="text-body-secondary">{{miUser.email}}</small></p>
-      </div>
-     </div>
-    </div>
-   </div>
--->
