--- a/src/app/components/user-card/user-card.component.html
+++ b/src/app/components/user-card/user-card.component.html
@@ -4,7 +4,7 @@
       <h4 class="card-title">{{miUser.first_name}}</h4>
       <h5 class="card-title">{{miUser.last_name}}</h5>
       <p class="card-text">&#64;{{miUser.username}}</p>
-      <a [routerLink]="['/user', miUser.id]">Ver detalle</a>
+      <a [routerLink]="['/user', miUser._id]">Ver detalle</a>
     </div>
   </div>
 
