--- a/src/app/pages/user-view/user-view.component.html
+++ b/src/app/pages/user-view/user-view.component.html
@@ -1,14 +1,21 @@
-<div class="card mb-3" >
+
+<div class="card mb-3 shadow" >
     <div class="row g-0">
       <div class="col-md-4">
-        <img src="..." class="img-fluid rounded-start" alt="...">
+        <img [src]="unUser.image" class="img-fluid rounded-start shadow" [alt]="unUser.username">
       </div>
       <div class="col-md-8">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+          <div class="text-center h1 mt-2">
+            <span class="card-title">{{unUser.first_name}}</span>
+            <span class="card-title">{{unUser.last_name}}</span>
+          </div>
+          <hr>
+          <p class="card-text display-6">Nombre Usuario: {{unUser.username}}</p>
+          <p class="card-text display-6">Email: {{unUser.email}}</p>
         </div>
       </div>
     </div>
   </div>
+
+  
