Ruta nuevo usuario

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <header  class="navbar bg-dark text-white p-3 shadow" >
  <h2>PRÁCTICA_6</h2> 
+ <div>
+  <a class="btn btn-dark" role="button" [routerLink] = "['/home']">HOME</a>
+  <a class="btn btn-dark" role="button">NUEVO USUARIO</a>
+ </div>
 </header>
 <main class="mt-4">
   <div class="container">
