--- a/src/app/components/btn/btn.component.html
+++ b/src/app/components/btn/btn.component.html
@@ -4,6 +4,6 @@
     }@else if (container === 'view') {
         <a class="btn btn-secondary" [routerLink]="['/home']">Volver</a>
     }
-    <a class="btn btn-secondary" [routerLink]="['/update','user', idUser]">Actualizar</a>
+    <a class="btn btn-secondary" [routerLink]="['/updateuser', idUser]">Actualizar</a>
     <button class="btn btn-secondary" (click)="borrarUser('idUser')">Borrar</button>
 </div>
