--- a/src/app/pages/form/form.component.html
+++ b/src/app/pages/form/form.component.html
@@ -1,1 +1,32 @@
-<p>form works!</p>
+<section>
+    <h2>{{tipo}} USUARIO</h2>
+    <hr>
+    <form [formGroup]="usersForm" (ngSubmit)="getDataForm()">
+        <div>
+            <label class="form-label" for="first_name">Nombre:</label>
+            <input class="form-control" type="text" id="first_name" formControlName="first_name">
+        </div>
+        <div>
+            <label class="form-label" for="last_name">Apellido:</label>
+            <input class="form-control" type="text" id="last_name" formControlName="last_name">
+        </div>
+        <div>
+            <label class="form-label" for="image">URL imagen de perfil*</label>
+            <input class="form-control" type="text" id="image" formControlName="image">
+        </div>
+        <div>
+            <label class="form-label" for="username">Nombre de Usuario:</label>
+            <input class="form-control" type="text" id="username" formControlName="username">
+        </div>
+        <div>
+            <label class="form-label" for="email">Email:</label>
+            <input class="form-control" type="email" id="email" formControlName="email">
+        </div>
+        <div>
+            <label class="form-label" for="password">Contraseña:</label>
+            <input class="form-control" type="password" id="password" formControlName="password">
+        </div>
+        <input type="submit" value="Enviar" class="btn btn-dark mt-4">
+    </form>
+    <p class="mt-4">Los campos marcados con * son de caracter opcionales.</p>
+</section>
