--- a/src/app/pages/form/form.component.html
+++ b/src/app/pages/form/form.component.html
@@ -1,32 +1,67 @@
 <section>
     <h2>{{tipo}} USUARIO</h2>
     <hr>
+    <p>{{usersForm.valid}}</p>
     <form [formGroup]="usersForm" (ngSubmit)="getDataForm()">
-        <div>
+        <div class="my-2">
             <label class="form-label" for="first_name">Nombre:</label>
-            <input class="form-control" type="text" id="first_name" formControlName="first_name">
+            <input class="form-control" type="text" id="first_name" placeholder="Nombre" formControlName="first_name">
+
+            @if(checkControl('first_name','required')){
+                <p class="error">Campo requerido.</p>
+            }
+
+            @if(checkControl('first_name','minlength')){
+                <p class="error">El campo debe contener al menos tres caracteres.</p>
+            }
+            
         </div>
-        <div>
+        <div class="my-2">
             <label class="form-label" for="last_name">Apellido:</label>
-            <input class="form-control" type="text" id="last_name" formControlName="last_name">
+            <input class="form-control" type="text" placeholder="Apellido" id="last_name" formControlName="last_name">
+            @if(checkControl('last_name','required')){
+                <p class="error">Campo requerido.</p>
+            }
+
+            @if(checkControl('last_name','minlength')){
+                <p class="error">El campo debe contener al menos tres caracteres.</p>
+            }
         </div>
-        <div>
+        <div class="my-2">
             <label class="form-label" for="image">URL imagen de perfil*</label>
-            <input class="form-control" type="text" id="image" formControlName="image">
+            <input class="form-control" type="text" id="image" placeholder="Imagen" formControlName="image">
         </div>
-        <div>
+        <div class="my-2">
             <label class="form-label" for="username">Nombre de Usuario:</label>
-            <input class="form-control" type="text" id="username" formControlName="username">
+            <input class="form-control" type="text" id="username" placeholder="Username" formControlName="username">
+            @if(checkControl('username','required')){
+                <p class="error">Campo requerido.</p>
+            }
+
         </div>
-        <div>
+        <div class="my-2">
             <label class="form-label" for="email">Email:</label>
-            <input class="form-control" type="email" id="email" formControlName="email">
+            <input class="form-control" type="email" id="email" placeholder="Email" formControlName="email">
+            @if(checkControl('email','required')){
+                <p class="error">Campo requerido.</p>
+            }
+
         </div>
-        <div>
+        <div class="my-2">
             <label class="form-label" for="password">Contraseña:</label>
-            <input class="form-control" type="password" id="password" formControlName="password">
+            <input class="form-control" type="password" id="password" placeholder="Password" formControlName="password">
+            @if(checkControl('password','required')){
+                <p class="error">Campo requerido.</p>
+            }
         </div>
-        <input type="submit" value="Enviar" class="btn btn-dark mt-4">
+        <div class="my-2">
+            <label class="form-label" for="repassword">Repetir contraseña:</label>
+            <input class="form-control" type="password" id="repassword" placeholder="Password" formControlName="repassword">
+            @if(checkControl('repassword','required')){
+                <p class="error">Campo requerido.</p>
+            }
+        </div>
+        <input type="submit" value="Enviar" class="btn btn-dark mt-4" [disabled]="!usersForm.valid">
     </form>
-    <p class="mt-4">Los campos marcados con * son de caracter opcionales.</p>
+    <p class="mt-4">Los campos marcados con * son de caracter opcional.</p>
 </section>
