--- a/src/app/pages/form/form.component.html
+++ b/src/app/pages/form/form.component.html
@@ -42,8 +42,8 @@
         <div class="my-2">
             <label class="form-label" for="email">Email:</label>
             <input class="form-control" type="email" id="email" placeholder="Email" formControlName="email">
-            @if(checkControl('email','required')){
-                <p class="error">Campo requerido.</p>
+            @if(checkControl('email','pattern')){
+                <p class="error">Introduce un email válido.</p>
             }
 
         </div>
