Cambiar página Implementado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,6 @@
       <router-outlet />
   </div>
 </main>
-<footer>
-
+<footer class="bg-dark text-white p-3 shadow">
+  <h5>COPYRIGHT©2024</h5>
 </footer>
