--- a/src/app/pages/users-list/users-list.component.html
+++ b/src/app/pages/users-list/users-list.component.html
@@ -6,5 +6,7 @@
     }
     
 </div>
-
-
+<div class="pagination-buttons d-flex  justify-content-evenly mt-3 mb-5">
+    <button class="btn btn-outline-dark" (click)="changePage(1)">← Primera página</button>
+    <button  class="btn btn-outline-dark" (click)="changePage(2)">Segunda página →</button>
+</div>
