--- a/src/app/pages/user-view/user-view.component.html
+++ b/src/app/pages/user-view/user-view.component.html
@@ -2,7 +2,7 @@
 <div class="card mb-3 shadow" >
     <div class="row g-0">
       <figure class=" col-md-4 mt-3">
-        <img [src]="unUser.image" class=" col-md-10 rounded-start shadow" [alt]="unUser.username">
+        <img [src]="unUser.image" class="mx-4 col-md-10 rounded-start shadow" [alt]="unUser.username">
       </figure>
       <div class="col-md-8">
         <div class="card-body">
