--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,6 @@
       <router-outlet />
   </div>
 </main>
-<footer class="bg-dark text-white p-3 shadow">
+<footer class="bg-dark text-white p-4 shadow position-static bottom-0">
   <h5>COPYRIGHT©2024</h5>
 </footer>
