--- a/src/app/pages/form/form.component.html
+++ b/src/app/pages/form/form.component.html
@@ -1,4 +1,4 @@
-<section>
+<section class="form">
     <h2 class="text-center">{{tipo}} USUARIO</h2>
     <hr>
     <p class="estado">{{usersForm.valid}}</p>
