--- a/src/app/components/btn/btn.component.css
+++ b/src/app/components/btn/btn.component.css
@@ -1,8 +1,8 @@
 .iconos{
-    margin-top: 15px;
-    display: flex;
-    justify-content: space-around;
-    gap: 25px;
-    padding-top: 20px;
+  text-align: center;
+  
 
+}
+svg{
+    margin:10px 0 20px 0;
 }
