--- a/src/app/pages/user-view/user-view.component.html
+++ b/src/app/pages/user-view/user-view.component.html
@@ -2,7 +2,7 @@
 <div class="container card mb-3 shadow col-md-8" >
     <div class="row g-0">
       <figure class=" col-md-5">
-        <img [src]="unUser.image" class="mx-4 col-md-10  shadow" [alt]="unUser.username">
+        <img [src]="unUser.image" class="mx-4 col-md-10  img-fluid shadow" [alt]="unUser.username">
       </figure>
       <div class="col-md-7">
         <div class="card-body">
